# web-server

./: .gitignore  CMakeLists.txt  README.md  config.txt  random.txt  requirements.txt
include/: client.h  logger.h  server.h  threadpool.h
src/: CMakeLists.txt  client.cpp  logger.cpp  main.cpp  server.cpp  threadpool.cpp
static/: about.html  hello.html  index.html
tests/: CMakeLists.txt  tests.py
